--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -1,9 +1,77 @@
 /* Here we can set styles for this lab page that we don't want to effect others pages */
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-.minor-section {
-    padding: 10px;
-    margin-bottom: 10px;
-    border: solid 1px #888;
-    background-color: #DDD8C4;
+
+@font-face {
+  font-family: "LoversQuarrel";
+  src: url("../LoversQuarrel.ttf") format("truetype")
   }
+  
+  h1{
+  font-family: "LoversQuarrel";
+  color: white;
+  margin: 50px;
+  }
+  
+  h2{
+  text-decoration: underline;
+  }
+  
+  body {
+    background-color: lavender;
+  }
+  
+  .interest {
+    margin-bottom: 10px;
+    width:150px;
+    height: 80px;
+    border-radius: 10px;
+  }
+  
+  .home {
+  text-align: center;
+  margin: auto;
+  width:150px;
+  height:50px;
+  }
+  
+  #content {
+    margin: auto;
+    width: 50%;
+    padding: 20px;
+    border: solid 3px pink;
+    border-radius: 10px;
+    background-color: #ffffff;
+  }
+  
+  .info {
+    float: left;
+    margin-left: 50px;
+    max-width: 70%
+  }
+  
+  .likes {
+    float: left;
+    margin-left: 50px;
+    max-width: 70%
+  }
+  
+  /* https://www.w3schools.com/howto/howto_css_two_columns.asp */
+  .column {
+    float: left;
+    width: 50%;
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  .minor-section {
+  text-align: justify;
+  margin-left: 50px;
+  margin-right: 50px;
+  }
+  
