--- a/css/site.css
+++ b/css/site.css
@@ -4,7 +4,7 @@
 
 /* we can select an html element tag, in this case "body" will apply to the whole document */
 body {
-  background-color: #50808E;
+  background-color: #070808;
 }
 
 /* we can have rules apply to multiple elements at the same time with commas */
@@ -21,10 +21,10 @@ h1 {
 
 /* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
 #content {
-  margin: 10px;
-  padding: 10px;
-  border: solid 1px #888;
-  background-color: #84B59F;
+  margin: 20px;
+  padding: 20px;
+  border: solid 1px #ff0505;
+  background-color: rgb(250, 251, 248);
 }
 
 /* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
