--- a/lab7/css/lab.css
+++ b/lab7/css/lab.css
@@ -4,6 +4,6 @@
 .minor-section {
     padding: 10px;
     margin-bottom: 10px;
-    border: solid 1px #888;
+    border: solid 1px #0f0c0c;
     background-color: #DDD8C4;
   }
