--- a/Team Project/css/lab.css
+++ b/Team Project/css/lab.css
@@ -8,3 +8,38 @@
   border: solid 30px pink;
   background-color: #ffffff;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1500; /* Increase this value */
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+  background-color: #f9f9f9; /* Light grey background */
+  margin: 15% auto;
+  padding: 40px; /* More padding */
+  border: 1px solid #888;
+  width: 50%; /* Less width for a smaller modal */
+  border-radius: 10px; /* Rounded corners */
+  font-family: Arial, sans-serif; /* Change the font */
+}
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
