--- a/Team Project/css/lab.css
+++ b/Team Project/css/lab.css
@@ -48,17 +48,9 @@
   /* Main content styling */
   main {
     padding: 20px;
+    border-radius: 30px;
   }
 
-  .modal-content {
-    background-color: #333333;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #1DB954; /* Spotify green border */
-    width: 80%;
-    border-radius: 20px;
-  }
-  
   .close {
     color: #aaa;
     float: right;
@@ -90,17 +82,7 @@
     text-align: center;
     margin-top: 20px;
   }
-  
-  /* Popup styling */
-  #popup {
-    display: none;
-    background-color: #333333;
-    padding: 20px;
-    border: 1px solid #000000;
-    text-align: center;
-    border-radius: 20px; /* Adjust the value for the desired level of roundness */
-  }
-  
+
   /* Links styling */
   a {
     color: #1DB954;
@@ -116,4 +98,44 @@
   .music-map {
     background-color: #1DB954;
     border-radius: 20px; 
+}
+
+/* POPUP WELCOME MSG */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+  background-color: #1DB954;
+  margin: 15% auto;
+  padding: 20px;
+  border: 5px solid black;
+  border-radius: 30px;
+  width: 80%;
+}
+
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.music-map {
+  border-radius: 10px; /* Adjust this value as needed */
 }
